数组中的逆序对

--- a/record/把数组排成最小的数.md
+++ b/record/把数组排成最小的数.md
@@ -1,4 +1,6 @@
 # [45. 把数组排成最小的数](https://leetcode-cn.com/problems/ba-shu-zu-pai-cheng-zui-xiao-de-shu-lcof/)
+
+### sort的compare函数编写
 ### 题意
 输入一个正整数数组，把数组里所有数字拼接起来排成一个数，打印能拼接出的所有数字中最小的一个。
 例：
